🐛 FIX: #8 Solve inaccessibility of search filters on small screens + optimize z-indexe
Opening the keyboard pushes the footernav upwards. This may hide the extended search options.
This fix puts the search filters in front of the footernav.

--- a/src/styles/_z-index.scss
+++ b/src/styles/_z-index.scss
@@ -1,4 +1,5 @@
-$z-index-sidenav: 10;
+$z-index-footernav: 100;
+$z-index-navigation-flagmenu: 101;
+$z-index-search-options: 102;
 
-$z-index-footernav: 1000;
-$z-index-navigation-flagmenu: 1001;
+$z-index-sidenav: 200;
